--- a/accounting4vocationalday.html
+++ b/accounting4vocationalday.html
@@ -143,29 +143,31 @@ hr {margin-top: 5px;margin-bottom: 5px;}
 <!-- start edit event -->
 
 
-<h3 class="text-center tit"><strong><font size="4" color="white">INTRODUCTION</font></strong></h3>
+<h3 class="text-center tit"><strong><font size="6" color="white">INTRODUCTION</font></strong></h3>
 
-<h3 class="text-center tit"><strong><font size="4" color="yellow">ACCOUNTING IS THE LANGUAGE OF BUSINESS AND IS NEEDED NOW MORE THAN EVER BEFORE. IT IS THE BACKBONE OF ALL BUSINESSES AND THEREFORE IS A VERY BROAD SUBJECT. TODAY, THERE ARE MORE CEOS WITH DEGREES IN ACCOUNTING THAN ANY OTHER AREA OF STUDY.</font></strong></h3>
+<h3 class="text-center tit"><strong><font size="4" color="yellow">ACCOUNTING IS THE LANGUAGE OF BUSINESS AND IS NEEDED NOW MORE THAN EVER BEFORE. IT IS THE BACKBONE OF ALL BUSINESSES AND THEREFORE IS A VERY BROAD SUBJECT. TODAY, THERE ARE MORE CEOS WITH DEGREES IN ACCOUNTING THAN ANY OTHER AREA OF STUDY.
 
-<h3 class="text-center tit"><strong><font size="4" color="yellow">STUDYING ACCOUNTING PROVIDES A FIRM FOUNDATION ON WHICH YOU CAN BUILD A VARIETY OF CAREERS. WHEN YOU STUDY ACCOUNTING, YOU POSITION YOURSELF IN A VERY DESIRABLE PLACE AS A POTENTIAL EMPLOYEE. CHOOSE ACCOUNTING AND STUDY IN A FIELD THAT IS ALWAYS IN DEMAND.</font></strong></h3>
+STUDYING ACCOUNTING PROVIDES A FIRM FOUNDATION ON WHICH YOU CAN BUILD A VARIETY OF CAREERS. WHEN YOU STUDY ACCOUNTING, YOU POSITION YOURSELF IN A VERY DESIRABLE PLACE AS A POTENTIAL EMPLOYEE. CHOOSE ACCOUNTING AND STUDY IN A FIELD THAT IS ALWAYS IN DEMAND.
 
-<h3 class="text-center tit"><strong><font size="4" color="yellow">IT SHOULD BE NOTED THAT THIS IS A PRACTICAL SUBJECT WITH A MINIMUM OF THEORY. IT IS PREFERABLE (THOUGH NOT ESSENTIAL) THAT A GOOD KNOWLEDGE OF, AND INTEREST IN THE JUNIOR CERTIFICATE BUSINESS STUDIES COURSE HAS BEEN ATTAINED, IN ORDER TO COPE WITH THE CONCEPTS INVOLVED.</font></strong></h3>
+IT SHOULD BE NOTED THAT THIS IS A PRACTICAL SUBJECT WITH A MINIMUM OF THEORY. IT IS PREFERABLE (THOUGH NOT ESSENTIAL) THAT A GOOD KNOWLEDGE OF, AND INTEREST IN THE JUNIOR CERTIFICATE BUSINESS STUDIES COURSE HAS BEEN ATTAINED, IN ORDER TO COPE WITH THE CONCEPTS INVOLVED.
+</font></strong></h3>
 
-<h3 class="text-center tit"><strong><font size="4" color="white">THE NEED TO STUDY ACCOUNTING IN SENIOR SECONDARY SCHOOLS?</font></strong></h3>
 
-<h3 class="text-center tit"><strong><font size="4" color="yellow">1. BECAUSE IT PROVIDES AN EDUCATIONAL BACKGROUND THAT WILL HELP YOU SUCCEED IN A WIDE VARIETY OF JOBS.</font></strong></h3>
+<h3 class="text-center tit"><strong><font size="6" color="white">THE NEED TO STUDY ACCOUNTING IN SENIOR SECONDARY SCHOOLS?</font></strong></h3>
 
-<h3 class="text-center tit"><strong><font size="4" color="yellow">2. BECAUSE THE SECURITY OFFERED BY ACCOUNTING POSITIONS IS GREATER THAN WITH JOBS IN SOME OTHER FIELDS.</font></strong></h3>
+<h3 class="text-center tit"><strong><font size="4" color="yellow">📌1. BECAUSE IT PROVIDES AN EDUCATIONAL BACKGROUND THAT WILL HELP YOU SUCCEED IN A WIDE VARIETY OF JOBS.</font></strong></h3>
 
-<h3 class="text-center tit"><strong><font size="4" color="yellow">3. BECAUSE ACCOUNTING POSITIONS AND OTHER JOBS RELATED TO ACCOUNTING ARE AVAILABLE ALL OVER THE WORLD, ALLOWING YOU THE FREEDOM TO LIVE AND WORK IN A VARIETY OF PLACES.</font></strong></h3>
+<h3 class="text-center tit"><strong><font size="4" color="yellow">📌2. BECAUSE THE SECURITY OFFERED BY ACCOUNTING POSITIONS IS GREATER THAN WITH JOBS IN SOME OTHER FIELDS.</font></strong></h3>
 
-<h3 class="text-center tit"><strong><font size="4" color="yellow">4. BECAUSE ANYONE WHO HAS THEIR MIND SET ON A CAREER IN BUSINESS WILL BENEFIT FROM HAVING AN ACCOUNTING BACKGROUND TO HELP THEM SUCCEED.</font></strong></h3>
+<h3 class="text-center tit"><strong><font size="4" color="yellow">📌3. BECAUSE ACCOUNTING POSITIONS AND OTHER JOBS RELATED TO ACCOUNTING ARE AVAILABLE ALL OVER THE WORLD, ALLOWING YOU THE FREEDOM TO LIVE AND WORK IN A VARIETY OF PLACES.</font></strong></h3>
 
-<h3 class="text-center tit"><strong><font size="4" color="yellow">5. IT ENCOURAGES THE DEVELOPMENT OF SELF-RELIANCE, MENTAL ORGANISATION AND AGILITY, CLEAR AND LOGICAL THINKING, PLANNING HABITS, METHODS OF INVESTIGATION AND PROCESSES WHEREBY ACCURACY CAN BE ENSURED</font></strong></h3>
+<h3 class="text-center tit"><strong><font size="4" color="yellow">📌4. BECAUSE ANYONE WHO HAS THEIR MIND SET ON A CAREER IN BUSINESS WILL BENEFIT FROM HAVING AN ACCOUNTING BACKGROUND TO HELP THEM SUCCEED.</font></strong></h3>
 
-<h3 class="text-center tit"><strong><font size="4" color="yellow">6. IT ENHANCES NUMERACY SKILLS AND PROMOTES AWARENESS OF THE USE OF FIGURES COMPUTATIONS AND STATISTICS IN THE WORLD OF BUSINESS AND ENTERPRISE</font></strong></h3>
+<h3 class="text-center tit"><strong><font size="4" color="yellow">📌5. IT ENCOURAGES THE DEVELOPMENT OF SELF-RELIANCE, MENTAL ORGANISATION AND AGILITY, CLEAR AND LOGICAL THINKING, PLANNING HABITS, METHODS OF INVESTIGATION AND PROCESSES WHEREBY ACCURACY CAN BE ENSURED</font></strong></h3>
 
-<h3 class="text-center tit"><strong><font size="4" color="yellow">7. IT EXPOSES STUDENTS TO ASPECTS OF BUSINESS AND ENTERPRISE WITH A VIEW TO CAREER AND WORKING LIFE, ADDITIONAL STUDIES IN ACCOUNTING OR AS A BASIS FOR FURTHER EDUCATION.</font></strong></h3>
+<h3 class="text-center tit"><strong><font size="4" color="yellow">📌6. IT ENHANCES NUMERACY SKILLS AND PROMOTES AWARENESS OF THE USE OF FIGURES COMPUTATIONS AND STATISTICS IN THE WORLD OF BUSINESS AND ENTERPRISE</font></strong></h3>
+
+<h3 class="text-center tit"><strong><font size="4" color="yellow">📌7. IT EXPOSES STUDENTS TO ASPECTS OF BUSINESS AND ENTERPRISE WITH A VIEW TO CAREER AND WORKING LIFE, ADDITIONAL STUDIES IN ACCOUNTING OR AS A BASIS FOR FURTHER EDUCATION.</font></strong></h3>
 
 <h3 class="text-center tit"><strong><font size="4" color="yellow">SHARE THE APP WITH YOUR FRIENDS</font></strong></h3>
 
