--- a/accounting4vocationalday.html
+++ b/accounting4vocationalday.html
@@ -169,17 +169,6 @@ IT SHOULD BE NOTED THAT THIS IS A PRACTICAL SUBJECT WITH A MINIMUM OF THEORY. IT
 
 <h3 class="text-center tit"><strong><font size="4" color="yellow">📌7. IT EXPOSES STUDENTS TO ASPECTS OF BUSINESS AND ENTERPRISE WITH A VIEW TO CAREER AND WORKING LIFE, ADDITIONAL STUDIES IN ACCOUNTING OR AS A BASIS FOR FURTHER EDUCATION.</font></strong></h3>
 
-<h3 class="text-center tit"><strong><font size="4" color="yellow">SHARE THE APP WITH YOUR FRIENDS</font></strong></h3>
-
-<h3 class="text-center tit"><strong><font size="4" color="yellow">SHARE THE APP WITH YOUR FRIENDS</font></strong></h3>
-
-<h3 class="text-center tit"><strong><font size="4" color="yellow">SHARE THE APP WITH YOUR FRIENDS</font></strong></h3>
-
-<h3 class="text-center tit"><strong><font size="4" color="yellow">SHARE THE APP WITH YOUR FRIENDS</font></strong></h3>
-
-<h3 class="text-center tit"><strong><font size="4" color="yellow">SHARE THE APP WITH YOUR FRIENDS</font></strong></h3>
-
-
 
 
 
@@ -187,7 +176,7 @@ IT SHOULD BE NOTED THAT THIS IS A PRACTICAL SUBJECT WITH A MINIMUM OF THEORY. IT
 
       <hr style="margin-top: 20px;">
 
-<h3 class="text-center tit"><a href="https://aamobiletv.blogspot.com/" target="_blank">DOWNLOAD AA MOBILE TV NOW !!! </a></h3>
+<h3 class="text-center tit"><strong><font size="6" color="white">HAPPY VOCATIONAL DAY 2022</font></strong></h3>
 
 
 
