--- a/accounting4vocationalday.html
+++ b/accounting4vocationalday.html
@@ -152,6 +152,8 @@ STUDYING ACCOUNTING PROVIDES A FIRM FOUNDATION ON WHICH YOU CAN BUILD A VARIETY 
 IT SHOULD BE NOTED THAT THIS IS A PRACTICAL SUBJECT WITH A MINIMUM OF THEORY. IT IS PREFERABLE (THOUGH NOT ESSENTIAL) THAT A GOOD KNOWLEDGE OF, AND INTEREST IN THE JUNIOR CERTIFICATE BUSINESS STUDIES COURSE HAS BEEN ATTAINED, IN ORDER TO COPE WITH THE CONCEPTS INVOLVED.
 </font></strong></h3>
 
+<h3 class="text-center tit"><a href="go:WUFFY" target="_blank"><img alt="thumb" height="200" src="https://tinyurl.com/accountant100" width="100%"></img></a></h3>
+
 
 <h3 class="text-center tit"><strong><font size="6" color="white">THE NEED TO STUDY ACCOUNTING IN SENIOR SECONDARY SCHOOLS?</font></strong></h3>
 
@@ -208,7 +210,7 @@ IT SHOULD BE NOTED THAT THIS IS A PRACTICAL SUBJECT WITH A MINIMUM OF THEORY. IT
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright © 2021 | <a href="https://aamobiletv.blogspot.com/" target="_blank">AA MOBILE TV</a></p>
+      <p class="m-0 text-center text-white">Copyright © 2022 | <a href="https://aamobiletv.blogspot.com/" target="_blank">ADENIYI TAIWO OLUWASEUN </a></p>
     </div>
     <!-- /.container -->
   </footer>
