--- a/QvsE/MAX-1.html
+++ b/QvsE/MAX-1.html
@@ -43,13 +43,13 @@
 
 <h3 class="text-center tit"><strong><font size="6" color="red">OPTION 3</font></strong><br><br>
 
-<a href="javascript:void(0)" onclick="location.href='intent://aloka-arena.online:443/live/alokahd1/alokahd1/989.ts|User-agent=ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ#Intent;scheme=https;type=video;package=com.genuine.leone;end'" ><strong><font size="5" color="blue">BEIN SPORTS 1 MAX SD </font></a><br>
+<a href="javascript:void(0)" onclick="location.href='intent://aloka-arena.online:443/live/max11/cup22/989.ts|User-agent=ㅤㅤㅤㅤ#Intent;scheme=https;type=video;package=com.genuine.leone;end'" ><strong><font size="5" color="blue">BEIN SPORTS 1 MAX SD </font></a><br>
 
-<a href="javascript:void(0)" onclick="location.href='intent://aloka-arena.online:443/live/alokahd1/alokahd1/988.ts|User-agent=ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ#Intent;scheme=https;type=video;package=com.genuine.leone;end'" ><strong><font size="5" color="blue">BEIN SPORTS 1 MAX HD </font></a><br>
+<a href="javascript:void(0)" onclick="location.href='intent://aloka-arena.online:443/live/max11/cup22/988.ts|User-agent=ㅤㅤㅤㅤ#Intent;scheme=https;type=video;package=com.genuine.leone;end'" ><strong><font size="5" color="blue">BEIN SPORTS 1 MAX HD </font></a><br>
 
-<a href="javascript:void(0)" onclick="location.href='intent://aloka-arena.online:443/live/alokahd1/alokahd1/996.ts|User-agent=ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ#Intent;scheme=https;type=video;package=com.genuine.leone;end'" ><strong><font size="5" color="blue">BEIN SPORTS 1 MAX FHD </font></a><br>
+<a href="javascript:void(0)" onclick="location.href='intent://aloka-arena.online:443/live/max11/cup22/996.ts|User-agent=ㅤㅤㅤㅤ#Intent;scheme=https;type=video;package=com.genuine.leone;end'" ><strong><font size="5" color="blue">BEIN SPORTS 1 MAX FHD </font></a><br>
 
-<a href="javascript:void(0)" onclick="location.href='intent://aloka-arena.online:443/live/alokahd1/alokahd1/1010.ts|User-agent=ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ#Intent;scheme=https;type=video;package=com.genuine.leone;end'" ><strong><font size="5" color="blue">BEIN SPORTS 1 MAX HD* </font></a><br>
+<a href="javascript:void(0)" onclick="location.href='intent://aloka-arena.online:443/live/max11/cup22/1010.ts|User-agent=ㅤㅤㅤㅤ#Intent;scheme=https;type=video;package=com.genuine.leone;end'" ><strong><font size="5" color="blue">BEIN SPORTS 1 MAX HD* </font></a><br>
 
 
 <h3 class="text-center tit"><strong><font size="6" color="red">OPTION 3=</font></strong><br><br>
