--- a/AAmobileTV-98.html
+++ b/AAmobileTV-98.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 FRAMESET//EN">
 <HTML>
 <HEAD>
-<TITLE>Welcome</TITLE>
+<TITLE>AA-MOBILE-TV STREAMS</TITLE>
 </HEAD>
 <FRAMESET ROWS="100%">
   <FRAME SRC="https://daddyhd.com/embed/stream-98.php">
   <NOFRAMES>
     <HEAD>
-    <TITLE>Welcome</TITLE>
+    <TITLE>AA-MOBILE-TV STREAMS</TITLE>
     <META HTTP-EQUIV="REFRESH" CONTENT="0; URL='https://daddyhd.com/embed/stream-98.php'">
     </HEAD>
     <BODY>
